--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .input {
-    @apply w-full rounded-full bg-stone-50 border border-stone-200 px-3 py-1 transition-all duration-300 placeholder:text-stone-400 focus:outline-none focus:ring focus:ring-yellow-400 focus:ring-offset-1 sm:px-4 sm:py-2;
+    @apply rounded-full bg-stone-50 border border-stone-200 px-3 py-1 transition-all duration-300 placeholder:text-stone-400 focus:outline-none focus:ring focus:ring-yellow-400 focus:ring-offset-1 sm:px-5 sm:py-1.5;
   }
 
   /* https://dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje */
